Local variables declared as var in tests